tests/errors/comprehensive/E2030_expected_block.ez
/*
 * Error Test: E2030 - expected-block
 * Expected: "expected '{'"
 */

def MyStruct struct
    x int
}

do main() {
    temp s MyStruct = new MyStruct{}
}
